--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search App</title>
-    <script type="module" src="index.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <script type="module" src="/js/index.js" defer></script>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <input type="text" id="searchQuery" placeholder="Enter search term">
